# prosimos-microservice

./: .gitignore  .gitmodules  Dockerfile.api  Dockerfile.worker  README.md  app.py  celery.sh  docker-compose.yml  exts.py  factory.py  pyproject.toml  requirements.txt  tasks.py
.github/workflows/: deps-python-app.yml  docker-image.yml
api/: ProsimosApiHandler.py
src/: exceptions.py  tasks.py
src/api/: DiscoveryApiHandler.py  FileApiHandler.py  ParamsApiHandler.py  ProsimosApiHandler.py  SimulationApiHandler.py  TaskApiHandler.py
src/celery/data/: README.md
src/swagger/: discovery_post.yml  file_get.yml  initial_components_schemas.yml  simulation_post.yml  task_get.yml
temp_files/: bimp_example_stat.csv
