[tool.poetry]
name = "prosimos-microservice"
version = "0.1.0"
description = ""
authors = ["Iryna Halenok"]
readme = "README.md"
packages = [{include = "src/api"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
Flask = ">=2.0.2,<=2.3.2"
Flask-Cors = "^3.0.10"
Flask-RESTful = "^0.3.9"
gunicorn = "^20.1.0"
pandas = "^2.0.1"
celery = "^5.2.7"
prosimos = "^1.2.3"
flasgger = "^0.9.5"
itsdangerous = "2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
